NXP-15375: Fix display for long title, fix button alignment

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
@@ -352,7 +352,7 @@ input.tinyButton {
 /* =MainActions in Document Title Area */
 .titleBlock {
   float: left;
-  max-width: 60% }
+  max-width: 50em }
 
 .globalActions {
   float: right }
