--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/forms.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/forms.css
@@ -112,9 +112,9 @@ input[placeholder] {
   margin: 0 }
 
 .contentViewQuickFilterForm input.button {
-  border-radius: 0 1px 1px 0;
+  border-radius: 0 2px 2px 0;
   margin: 0;
-  padding: .3em .7em .37em }
+  padding: .3em .7em .33em }
 
 /* Document creation form */
 #document_create .buttonsGadget {
